# statical-modeling-for-data-analysis

./: .gitignore  README.md  ch02.ipynb  pyproject.toml  ruff.toml
